src/objects/ScorecardKPIMap__c.object
<CustomObject>
    <fields>
        <fullName>AverageScore__c</fullName>
        <formula>Score__c * SPETemplateWeight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPIPillar__c</fullName>
        <formula>Text(KPI__r.Group1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Pillar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPITarget__c</fullName>
        <label>KPI Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPIValue__c</fullName>
        <label>KPI Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Scorecard KPI Map</relationshipLabel>
        <relationshipName>Scorecard_KPI_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPETemplateWeight__c</fullName>
        <label>SPE Template Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SPETemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Template</label>
        <referenceTo>SPE_SPETemplate__c</referenceTo>
        <relationshipLabel>Scorecard KPI Map</relationshipLabel>
        <relationshipName>Scorecard_KPI_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScoreCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ScoreCard</label>
        <referenceTo>SPE_ScoreCard__c</referenceTo>
        <relationshipLabel>Scorecard KPI Map</relationshipLabel>
        <relationshipName>Scorecard_KPI_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Scorecard KPI Map</label>
    <nameField>
        <displayFormat>SKM-{0000}</displayFormat>
        <label>Scorecard ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard KPI Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>